--- a/ipk/control/control
+++ b/ipk/control/control
@@ -2,6 +2,6 @@ Package: headtracking-msp
 Version: 0.0.1
 Maintainer: shambler
 Description: Enables headtracking on v1 googles
-Architecture: pigeon-v1
+Architecture: pigeon-glasses-v1
 Homepage: https://github.com/shambler123/wtf_headtracking-msp/
 Depends: wtfos-modloader
